# music_widget_cpp

./: CMakeCache.txt  CMakeLists.txt  CavaWidget.cpp  CavaWidget.h  GEMINI.md  LICENSE  Makefile  MusicWidget.cpp  MusicWidget.h  MusicWidgetCpp  README.md  SettingsManager.cpp  SettingsManager.h  SpectrumWidget.cpp  SpectrumWidget.h  WindowState.h  cmake_install.cmake  main.cpp  status_analysis.md  style.css
